--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react-device": "^0.8.1",
     "react-dom": "^16.10.2",
     "react-particles-js": "^2.7.0",
+    "react-plotly": "^1.0.0",
+    "react-plotly.js": "^2.4.0",
     "react-pose": "^4.0.8",
     "react-pose-text": "^3.1.0",
     "react-redux": "^7.1.1",
