--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.1",
     "html-react-parser": "^0.9.1",
     "lodash": "^4.17.15",
+    "plotly.js": "^1.52.3",
     "react": "^16.10.2",
     "react-addons-css-transition-group": "^15.6.2",
     "react-device": "^0.8.1",
