--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^1.4.0",
     "react-scripts": "2.1.8",
+    "react-smart-data-table": "^0.7.4",
     "react-timeline-semantic-ui": "^1.0.13",
     "recharts": "^1.7.1",
     "redux": "^4.0.4",
