--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.1",
+    "file-saver": "^2.0.2",
     "html-react-parser": "^0.9.1",
     "lodash": "^4.17.15",
     "plotly.js": "^1.52.3",
     "react": "^16.10.2",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-csv": "^2.0.3",
     "react-device": "^0.8.1",
     "react-dom": "^16.10.2",
+    "react-json-to-csv": "^1.0.4",
     "react-particles-js": "^2.7.0",
     "react-plotly": "^1.0.0",
     "react-plotly.js": "^2.4.0",
