--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "file-saver": "^2.0.2",
     "html-react-parser": "^0.9.2",
     "lodash": "^4.17.15",
-    "plotly.js": "^1.54.1",
+    "plotly.js-basic-dist": "^1.54.1",
     "react": "^16.13.1",
     "react-addons-css-transition-group": "^15.6.2",
     "react-csv": "^2.0.3",
@@ -16,7 +16,6 @@
     "react-dom": "^16.13.1",
     "react-json-to-csv": "^1.0.4",
     "react-particles-js": "2.7.0",
-    "react-plotly": "^1.0.0",
     "react-plotly.js": "^2.4.0",
     "react-pose": "^4.0.10",
     "react-pose-text": "^3.1.0",
@@ -24,15 +23,13 @@
     "react-router-dom": "^5.1.2",
     "react-router-transition": "^1.4.0",
     "react-scripts": "2.1.8",
-    "react-smart-data-table": "^0.7.4",
     "react-timeline-semantic-ui": "^1.0.13",
     "recharts": "^1.8.5",
     "redux": "^4.0.5",
     "redux-form": "^8.3.5",
     "redux-thunk": "^2.3.0",
     "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^0.86.0",
-    "source-map-explorer": "^2.4.2"
+    "semantic-ui-react": "^0.86.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
@@ -52,6 +49,7 @@
   ],
   "devDependencies": {
     "dotenv": "^8.2.0",
-    "redux-devtools-extension": "^2.13.8"
+    "redux-devtools-extension": "^2.13.8",
+    "source-map-explorer": "^2.4.2"
   }
 }
